syntax = "proto3";

package netsvr.topicUniqIdCountResp;

option go_package = "pkg/protocol;protocol";

//worker响应business，返回网关中的主题包含的连接数
message TopicUniqIdCountResp {
  //worker原样回传给business
  bytes ctxData = 1;
  //key是topic，value是该主题的连接数
  //如果topic没找到，则items中不会有该topic
  map<string, int32> items = 2;
}